--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     </header>
     <section class="repositories">
         <p class="repository__length">Найдено <span class="repository__length_value"></span> результатов</p>
+        <p class="loading">Загрузка...</p>
     </section>
     <template id="repositories__unit">
         <div class="repositories__unit">
