--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <div class="repositories__unit">
             <img src="./pictures/folder-svgrepo-com.svg" alt="file" class="repositories__unit-img">
             <div class="repositories__unit_info">
-                <a href="#" class="unit_info-title"></a>
+                <a  class="unit_info-title"></a>
                 <p class="unit_info-subtitle"></p>
             </div>
         </div>
